--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <link rel="stylesheet" href="css/dist/style-index.css">
+    <link rel="stylesheet" href="dist/style-index.css">
     <script src="js/main.js" defer></script>
 </head>
 
@@ -24,7 +24,7 @@
 
         <nav>
             <a href="index.html">Home</a>
-            <a href="perfil.html">Profile</a>
+            <a href="pages/perfil.html">Profile</a>
             <a href="">Community</a>
             <a href="">Market</a>
             <a href="">Gambling</a>
