--- a/web/pages/perfil.html
+++ b/web/pages/perfil.html
@@ -8,22 +8,22 @@
 
     <link rel="stylesheet" href="https://use.typekit.net/oov2wcw.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <link rel="stylesheet" href="css/dist/style-perfil.css">
-    <script src="js/perfil.js" defer></script>
+    <link rel="stylesheet" href="../dist/style-perfil.css">
+    <script src="../js/perfil.js" defer></script>
 </head>
 
 <body>
     <!--! HEADER !-->
     <header class="container-header" id="to-the-top">
-        <a href="index.html"><img src="images/MHLogoSMALL.png" alt="Logo da MoonHunters"></a>
+        <a href="../index.html"><img src="../images/MHLogoSMALL.png" alt="Logo da MoonHunters"></a>
 
         <nav>
-            <a href="index.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="perfil.html">Profile</a>
             <a href="">Community</a>
             <a href="">Market</a>
@@ -49,49 +49,49 @@
                         <a>
                             <span class="item-number">#1</span>
                             <p>Bunny Buddies</p>
-                            <img src="images/perfil.svg" alt="">
+                            <img src="../images/perfil.svg" alt="">
                         </a>
                     </li>
                     <li>
                         <a>
                             <span class="item-number">#2</span>
                             <p>Flying Formations</p>
-                            <img src="images/perfil.svg" alt="">
+                            <img src="../images/perfil.svg" alt="">
                         </a>
                     </li>
                     <li>
                         <a>
                             <span class="item-number">#3</span>
                             <p>Creepy Creams</p>
-                            <img src="images/perfil.svg" alt="">
+                            <img src="../images/perfil.svg" alt="">
                         </a>
                     </li>
                     <li>
                         <a>
                             <span class="item-number">#4</span>
                             <p>MultiverseVM</p>
-                            <img src="images/perfil.svg" alt="">
+                            <img src="../images/perfil.svg" alt="">
                         </a>
                     </li>
                     <li>
                         <a>
                             <span class="item-number">#5</span>
                             <p>TheLandDAO Official</p>
-                            <img src="images/perfil.svg" alt="">
+                            <img src="../images/perfil.svg" alt="">
                         </a>
                     </li>
                     <li>
                         <a>
                             <span class="item-number">#6</span>
                             <p>Angry Pitbull Club</p>
-                            <img src="images/perfil.svg" alt="">
+                            <img src="../images/perfil.svg" alt="">
                         </a>
                     </li>
                     <li>
                         <a>
                             <span class="item-number">#7</span>
                             <p>Roo Troop</p>
-                            <img src="images/perfil.svg" alt="">
+                            <img src="../images/perfil.svg" alt="">
                         </a>
                     </li>
                 </ul>
@@ -102,13 +102,13 @@
                 <h3>News</h3>
                 <ul>
                     <li>
-                        <a><img src="images/banner-perfil.jpeg" alt=""></a>
+                        <a><img src="../images/banner-perfil.jpeg" alt=""></a>
                     </li>
                     <li>
-                        <a><img src="images/banner-perfil.jpeg" alt=""></a>
+                        <a><img src="../images/banner-perfil.jpeg" alt=""></a>
                     </li>
                     <li>
-                        <a><img src="images/banner-perfil.jpeg" alt=""></a>
+                        <a><img src="../images/banner-perfil.jpeg" alt=""></a>
                     </li>
                 </ul>
                 <a>More</a>
@@ -118,10 +118,10 @@
     
         <!--! Coluna Central !-->
         <div class="coluna-central">
-            <div class="banner-perfil"><img src="images/banner-perfil.jpeg" alt=""></div>
+            <div class="banner-perfil"><img src="../images/banner-perfil.jpeg" alt=""></div>
             <div class="container-content">
                 <div class="container-user">
-                    <img class="img-perfil" src="images/bored-ape-835-resized.jpeg" alt="">
+                    <img class="img-perfil" src="../images/bored-ape-835-resized.jpeg" alt="">
                     <svg style="position: absolute;">
                         <clipPath clipPathUnits="objectBoundingBox" id="clipPath">
                             <path d="M 0.75 1 C 0.75 1 0.8 1 0.82 0.95 L 0.82 0.95 L 0.97 0.45 C 0.97 0.45 0.99 0.36 0.94 0.3 L 0.94 0.3 L 0.57 0.03 C 0.57 0.03 0.5 -0.03 0.43 0.03 L 0.43 0.03 L 0.06 0.3 C 0.06 0.3 0.01 0.36 0.03 0.45 L 0.03 0.45 L 0.18 0.95 C 0.18 0.95 0.2 1 0.25 1 L 0.25 1 L 0.75 1" />
@@ -140,43 +140,36 @@
                 <div class="inventario">
                     <div class="inventario-header">
                         <h3>Inventory</h3>
-                        <a><ion-icon name="pencil-outline"></ion-icon></a>
+                        <a href="./inventory.html"><ion-icon name="pencil-outline"></ion-icon></a>
                     </div>
                     <div class="imagens">
-                        <div class="fileira-cima">
-                            <a href=""><img src="images/inventario.png" alt=""></a>
-                            <a href=""><img src="images/inventario.png" alt=""></a>
-                            <a href=""><img src="images/inventario.png" alt=""></a>
-                            <a href=""><img src="images/inventario.png" alt=""></a>
-                            <a href=""><img src="images/inventario.png" alt=""></a>
-                        </div>
-                        <div class="fileira-baixo">
-                            <a href=""><img src="images/inventario.png" alt=""></a>
-                            <a href=""><img src="images/inventario.png" alt=""></a>
-                            <a href=""><img src="images/inventario.png" alt=""></a>
-                            <a href=""><img src="images/inventario.png" alt=""></a>
-                            <a href=""><img src="images/inventario.png" alt=""></a>
+                        <div class="fileira">
+                            <a href=""><img src="../images/inventario.png" alt=""></a>
+                            <a href=""><img src="../images/inventario.png" alt=""></a>
+                            <a href=""><img src="../images/inventario.png" alt=""></a>
+                            <a href=""><img src="../images/inventario.png" alt=""></a>
+                            <a href=""><img src="../images/inventario.png" alt=""></a>
                         </div>
                     </div>
                     <div class="inventario-footer">
-                        <a>Showcase</a>
+                        <a href="./inventory.html">Showcase</a>
                     </div>
                 </div>
 
                 <div class="badges">
                     <div class="badges-header">
                         <h3>Badges</h3>
-                        <a><ion-icon name="pencil-outline"></ion-icon></a>
+                        <a href="./inventory.html"><ion-icon name="pencil-outline"></ion-icon></a>
                     </div>
                     <div class="imagens">
-                        <a href=""><img src="images/badge.webp" alt=""></a>
-                        <a href=""><img src="images/badge.webp" alt=""></a>
-                        <a href=""><img src="images/badge.webp" alt=""></a>
-                        <a href=""><img src="images/badge.webp" alt=""></a>
-                        <a href=""><img src="images/badge.webp" alt=""></a>
+                        <a href=""><img src="../images/badge.webp" alt=""></a>
+                        <a href=""><img src="../images/badge.webp" alt=""></a>
+                        <a href=""><img src="../images/badge.webp" alt=""></a>
+                        <a href=""><img src="../images/badge.webp" alt=""></a>
+                        <a href=""><img src="../images/badge.webp" alt=""></a>
                     </div>
                     <div class="badges-footer">
-                        <a>Showcase</a>
+                        <a href="./inventory.html">Showcase</a>
                     </div>
                 </div>
 
@@ -188,12 +181,12 @@
                     <div class="container-slider">
 
                         <div class="slider">
-                            <a><img src="images/gallery1.jpg"></a>
-                            <a><img src="images/gallery2.jpg"></a>
-                            <a><img src="images/gallery3.webp"></a>
-                            <a><img src="images/gallery4.webp"></a>
-                            <a><img src="images/gallery5.jpg"></a>
-                            <a><img src="images/gallery6.jpg"></a>
+                            <a><img src="../images/gallery1.jpg"></a>
+                            <a><img src="../images/gallery2.jpg"></a>
+                            <a><img src="../images/gallery3.webp"></a>
+                            <a><img src="../images/gallery4.webp"></a>
+                            <a><img src="../images/gallery5.jpg"></a>
+                            <a><img src="../images/gallery6.jpg"></a>
                         </div>
                         
                     </div>
@@ -212,27 +205,27 @@
                     </div>
                     <div class="write-comment">
                         <div class="comment-container">
-                            <img src="images/perfil.svg">
+                            <img src="../images/perfil.svg">
                             <textarea cols="" rows="" placeholder="Add a comment" class="textarea-comment"></textarea>
                         </div>
                     </div>
                     <div class="comments-list">
                         <div class="comment-container">
-                            <img src="images/perfil.svg">
+                            <img src="../images/perfil.svg">
                             <div class="comment">
                                 <h3>Friends name</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, corporis.</p>
                             </div>
                         </div>
                         <div class="comment-container">
-                            <img src="images/perfil.svg">
+                            <img src="../images/perfil.svg">
                             <div class="comment">
                                 <h3>Friends name</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores enim reprehenderit voluptatem labore expedita voluptatibus deserunt voluptas cum autem, voluptate atque, repellendus, repellat magni at?</p>
                             </div>
                         </div>
                         <div class="comment-container">
-                            <img src="images/perfil.svg">
+                            <img src="../images/perfil.svg">
                             <div class="comment">
                                 <h3>Friends name</h3>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
@@ -261,16 +254,16 @@
                     <a><ion-icon name="pencil-outline"></ion-icon></a>
                 </div>
                 <div class="imagens">
-                    <a href=""><img src="images/achievement.png"></a>
-                    <a href=""><img src="images/achievement.png"></a>
-                    <a href=""><img src="images/achievement.png"></a>
-                    <a href=""><img src="images/achievement.png"></a>
+                    <a href=""><img src="../images/achievement.png"></a>
+                    <a href=""><img src="../images/achievement.png"></a>
+                    <a href=""><img src="../images/achievement.png"></a>
+                    <a href=""><img src="../images/achievement.png"></a>
                 </div>
                 <div class="achievements-level">
                     <p>Level 50</p>
                     <div class="achievements-level-up">
                         <progress value="70" max="100"></progress>
-                        <img src="images/level_up_arrow.png">
+                        <img src="../images/level_up_arrow.png">
                     </div>
                 </div>
                 <div class="achievements-footer">
@@ -283,42 +276,42 @@
                 <ul>
                     <li>
                         <a>
-                            <img src="images/perfil.svg" alt="">
+                            <img src="../images/perfil.svg" alt="">
                             <p>Friend name</p>
                             <div class="nivel">40</div>
                         </a>
                     </li>
                     <li>
                         <a>
-                            <img src="images/perfil.svg" alt="">
+                            <img src="../images/perfil.svg" alt="">
                             <p>Friend name</p>
                             <div class="nivel">30</div>
                         </a>
                     </li>
                     <li>
                         <a>
-                            <img src="images/perfil.svg" alt="">
+                            <img src="../images/perfil.svg" alt="">
                             <p>Friend name</p>
                             <div class="nivel">25</div>
                         </a>
                     </li>
                     <li>
                         <a>
-                            <img src="images/perfil.svg" alt="">
+                            <img src="../images/perfil.svg" alt="">
                             <p>Friend name</p>
                             <div class="nivel">20</div>
                         </a>
                     </li>
                     <li>
                         <a>
-                            <img src="images/perfil.svg" alt="">
+                            <img src="../images/perfil.svg" alt="">
                             <p>Friend name</p>
                             <div class="nivel">10</div>
                         </a>
                     </li>
                     <li>
                         <a>
-                            <img src="images/perfil.svg" alt="">
+                            <img src="../images/perfil.svg" alt="">
                             <p>Friend name</p>
                             <div class="nivel">0</div>
                         </a>
