Add Trade Offer Friends page

--- a/web/pages/trades.html
+++ b/web/pages/trades.html
@@ -54,7 +54,7 @@
                         <p class="name">Username<span class="tag">#0000</span></p>
                     </div>
                     <div class="buttons">
-                        <a href="trades.html" class="default-button">New Offers</a>
+                        <a href="trade-offer-friends.html" class="default-button">New Offer</a>
                         <a href="" class="username-menu"><ion-icon name="ellipsis-horizontal"></ion-icon></a>
                     </div>
                 </div>
