Add trade pages
+trade-history.html
+trade-pendent-offers.html
=trades -> trade-sent-offers.html

--- a/web/pages/inventory.html
+++ b/web/pages/inventory.html
@@ -54,7 +54,7 @@
                         <p class="name">Username<span class="tag">#0000</span></p>
                     </div>
                     <div class="buttons">
-                        <a href="trades.html" class="default-button">Trade Offers</a>
+                        <a href="trades-pendent-offers.html" class="default-button">Trade Offers</a>
                         <a href="" class="username-menu"><ion-icon name="ellipsis-horizontal"></ion-icon></a>
                     </div>
 
