--- a/web/pages/trade-history.html
+++ b/web/pages/trade-history.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <link rel="stylesheet" href="../dist/style-trades.css">
+    <link rel="stylesheet" href="../dist/style-trade-pendent-offers.css">
     <script src="" defer></script>
 </head>
 
@@ -65,7 +65,10 @@
                     <div class="trade">
                         <div class="trade__head">
                             <img src="../images/gallery2.jpg" alt="">
-                            <p>Username offered you a trade:</p>
+                            <div class="trade__head-text">
+                                <p>You traded with FriendsName</p>
+                                <p>16/06/2022</p>
+                            </div>
                         </div>
                         <div class="trade__content">
                             <div class="trade__card">
@@ -78,20 +81,16 @@
                             <div class="trade__card">
                                 <p>For you:</p>
                                 <img src="../images/gallery5.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="trade__footer">
-                            <p>Expires on <time>16/06/2022</time></p>
-                            <div class="trade__footer-right">
-                                <a href="">Accept offer</a>
-                                <a href="">Decline</a>
                             </div>
                         </div>
                     </div>
                     <div class="trade">
                         <div class="trade__head">
                             <img src="../images/gallery2.jpg" alt="">
-                            <p>Username offered you a trade:</p>
+                            <div class="trade__head-text">
+                                <p>You traded with FriendsName</p>
+                                <p>16/06/2022</p>
+                            </div>
                         </div>
                         <div class="trade__content">
                             <div class="trade__card">
@@ -106,20 +105,13 @@
                                 <img src="../images/gallery5.jpg" alt="">
                             </div>
                         </div>
-                        <div class="trade__footer">
-                            <p>Expires on <time>16/06/2022</time></p>
-                            <div class="trade__footer-right">
-                                <a href="">Accept offer</a>
-                                <a href="">Decline</a>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <div class="trades__aside">
                     <h2>Trade Offers</h2>
-                    <a>Pendent Offers(10)</a>
-                    <a>Sent Offers</a>
-                    <a>Trade History</a>
+                    <a href="./trade-pendent-offers.html">Pendent Offers(10)</a>
+                    <a href="./trade-sent-offers.html">Sent Offers</a>
+                    <a href="./trade-history.html">Trade History</a>
                     <a>FAQ</a>
                 </div>
             </div>
